Update command data for Kia/Stinger

--- a/tests/test_cases/2019/command_support.yaml
+++ b/tests/test_cases/2019/command_support.yaml
@@ -83,7 +83,7 @@ unsupported_commands_by_ecu:
   "7C6":
   - 7C6.7CE.22B002|fc=1:KIA_CLUSTER_VOLTAGE,KIA_FLI_VOL,KIA_ODO_KM,KIA_ODO_MI,KIA_VPWR
   "7D1":
-  - 7D1.7D9.220104:KIA_BRAKE_P_V2,KIA_STEER_ANGLE_V2_V2,KIA_TC_SWITCH_V2,KIA_TIRE_FL_VSS_V2_V2,KIA_TIRE_FR_VSS_V2_V2,KIA_TIRE_RL_VSS_V2_V2,KIA_TIRE_RR_VSS_V2_V2,KIA_VSS_AVG_V2
+  - 7D1.7D9.220104:KIA_BRAKE_P_V2,KIA_STEER_ANGLE_V2,KIA_TC_SWITCH_V2,KIA_TIRE_FL_VSS_V2,KIA_TIRE_FR_VSS_V2,KIA_TIRE_RL_VSS_V2,KIA_TIRE_RR_VSS_V2,KIA_VSS_AVG_V2
   "7D4":
   - 7D4.7DC.220101:KIA_BMS_CHG_PWR,KIA_BMS_DISCHG_PWR,KIA_BMS_MIN_TEMP,KIA_BMS_MOD1_TEMP,KIA_BMS_MOD2_TEMP,KIA_BMS_MOD3_TEMP,KIA_BMS_MOD4_TEMP,KIA_BMS_SOC
   "7E0":
