--- a/tests/test_cases/2022/command_support.yaml
+++ b/tests/test_cases/2022/command_support.yaml
@@ -112,7 +112,7 @@ unsupported_commands_by_ecu:
   - 744.74C.22E003|fc=1:KIA_DC_CHRG_TIME,KIA_HVBAT_CHRG_CNT,KIA_HVBAT_DC_CHRGNG,KIA_HVBAT_SOC_VCMS,KIA_HVBAT_TARGET_CURR,KIA_HVBAT_TARGET_VOLT
   "7D1":
   - 7D1.7D9.2101:KIA_BRAKE_P,KIA_FL_VSS,KIA_FR_VSS,KIA_RL_VSS,KIA_RR_VSS,KIA_STEER_ANGLE,KIA_TC_SWITCH,KIA_TIRE_FL_VSS_V1,KIA_TIRE_FR_VSS_V1,KIA_TIRE_RL_VSS_V1,KIA_TIRE_RR_VSS_V1,KIA_VSS_AVG
-  - 7D1.7D9.220104:KIA_BRAKE_P_V2,KIA_STEER_ANGLE_V2_V2,KIA_TC_SWITCH_V2,KIA_TIRE_FL_VSS_V2_V2,KIA_TIRE_FR_VSS_V2_V2,KIA_TIRE_RL_VSS_V2_V2,KIA_TIRE_RR_VSS_V2_V2,KIA_VSS_AVG_V2
+  - 7D1.7D9.220104:KIA_BRAKE_P_V2,KIA_STEER_ANGLE_V2,KIA_TC_SWITCH_V2,KIA_TIRE_FL_VSS_V2,KIA_TIRE_FR_VSS_V2,KIA_TIRE_RL_VSS_V2,KIA_TIRE_RR_VSS_V2,KIA_VSS_AVG_V2
   - 7D1.7D9.224000:KIA_TIRE_FL_VSS,KIA_TIRE_FL_VSS_V2,KIA_TIRE_FR_VSS,KIA_TIRE_FR_VSS_V2,KIA_TIRE_RL_VSS,KIA_TIRE_RL_VSS_V2,KIA_TIRE_RR_VSS,KIA_TIRE_RR_VSS_V2
   "7D4":
   - 7D4.7DC.2101:KIA_STEER_ANGLE_V2
