--- a/tests/test_cases/2020/command_support.yaml
+++ b/tests/test_cases/2020/command_support.yaml
@@ -188,27 +188,27 @@ supported_commands_by_ecu:
 unsupported_commands_by_ecu:
   "7D1":
   - 7D1.7D9.2101:KIA_BRAKE_P,KIA_FL_VSS,KIA_FR_VSS,KIA_RL_VSS,KIA_RR_VSS,KIA_STEER_ANGLE,KIA_TC_SWITCH,KIA_TIRE_FL_VSS_V1,KIA_TIRE_FR_VSS_V1,KIA_TIRE_RL_VSS_V1,KIA_TIRE_RR_VSS_V1,KIA_VSS_AVG
-  - 7D1.7D9.220104:KIA_BRAKE_P_V2,KIA_STEER_ANGLE_V2_V2,KIA_TC_SWITCH_V2,KIA_TIRE_FL_VSS_V2_V2,KIA_TIRE_FR_VSS_V2_V2,KIA_TIRE_RL_VSS_V2_V2,KIA_TIRE_RR_VSS_V2_V2,KIA_VSS_AVG_V2
+  - 7D1.7D9.220104:KIA_BRAKE_P_V2,KIA_STEER_ANGLE_V2,KIA_TC_SWITCH_V2,KIA_TIRE_FL_VSS_V2,KIA_TIRE_FR_VSS_V2,KIA_TIRE_RL_VSS_V2,KIA_TIRE_RR_VSS_V2,KIA_VSS_AVG_V2
   - 7D1.7D9.224000:KIA_TIRE_FL_VSS,KIA_TIRE_FL_VSS_V2,KIA_TIRE_FR_VSS,KIA_TIRE_FR_VSS_V2,KIA_TIRE_RL_VSS,KIA_TIRE_RL_VSS_V2,KIA_TIRE_RR_VSS,KIA_TIRE_RR_VSS_V2
   "7D4":
   - 7D4.7DC.2101:KIA_STEER_ANGLE_V2
   "7D6":
   - 7D6.7DE.2106:KIA_TP_1,KIA_TP_2,KIA_TP_3,KIA_TP_4,KIA_TT_1,KIA_TT_2,KIA_TT_3,KIA_TT_4
   "7E0":
+  - 7E0.211D:KIA_MIS_1_V2,KIA_MIS_2_V2,KIA_MIS_3_V2,KIA_MIS_4_V2,KIA_MIS_CAT_1,KIA_MIS_CAT_2,KIA_MIS_CAT_3,KIA_MIS_CAT_4
   - 7E0.2221A0:KIA_ATF_TEMP
   - 7E0.7D8.2101
   - 7E0.7D8.2118:KIA_CVVT_T
-  - 7E0.7E8.2100:KIA_COOLANT_FAN_HIGH_SPEED,KIA_COOLANT_FAN_LOW_SPEED,KIA_FUEL_CUT,KIA_IDLE_CONTROL_MODE,KIA_KNOCK_DETECTED
+  - 7E0.7E8.2100:KIA_COOLANT_FAN_HIGH_SPEED,KIA_COOLANT_FAN_LOW_SPEED,KIA_FUEL_CUT_V2,KIA_IDLE_CONTROL_MODE,KIA_KNOCK_DETECTED_V2
   - 7E0.7E8.2101:KIA_COMMANDED_ENGINE_IDLE_RPM,KIA_CONTROL_MODULE_VOLTAGE,KIA_CONTROL_MODULE_VOLTAGE_AFTER_IGNITION,KIA_COOLANT_T_SENSOR_VOLTAGE,KIA_ENGINE_COOLANT_T,KIA_ENGINE_OIL_T,KIA_ENGINE_RPM,KIA_IAT_SENSOR_VOLTAGE,KIA_INTAKE_AIR_T,KIA_INTAKE_MANIFOLD_ABSOLUTE_PRESSURE,KIA_MAP_SENSOR_VOLTAGE,KIA_MIS_1,KIA_MIS_2,KIA_MIS_3,KIA_MIS_4
-  - 7E0.7E8.2102:KIA_COMMANDED_EVAPORATIVE_PURGE,KIA_FUEL_INJECTION_TIMING_1,KIA_FUEL_INJECTION_TIMING_2,KIA_FUEL_INJECTION_TIMING_3,KIA_FUEL_INJECTION_TIMING_4,KIA_OXYGEN_SENSOR_11,KIA_OXYGEN_SENSOR_21,KIA_VSS_V2_V2
-  - 7E0.7E8.2104:KIA_COOLANT_FAN_HIGH_SPEED__1_8_,KIA_COOLANT_FAN_LOW_SPEED__1_8_
+  - 7E0.7E8.2102:KIA_COMMANDED_EVAPORATIVE_PURGE,KIA_INJ_TIMING_1,KIA_INJ_TIMING_2,KIA_INJ_TIMING_3,KIA_INJ_TIMING_4,KIA_OXYGEN_SENSOR_11,KIA_OXYGEN_SENSOR_21,KIA_VSS_V2_V2
+  - 7E0.7E8.2104:KIA_COOLANT_FAN_HIGH_SPEED__1_8_,KIA_COOLANT_FAN_LOW_SPEED__1_8_,KIA_FUEL_CUT,KIA_KNOCK_DETECTED,KIA_WIDE_OPEN_THROTTLE
   - 7E0.7E8.210D:KIA_MIS_CNT_1,KIA_MIS_CNT_2,KIA_MIS_CNT_3,KIA_MIS_CNT_4,KIA_MIS_CNT_ALL,KIA_MIS_CNT_EMIS_1,KIA_MIS_CNT_EMIS_2,KIA_MIS_CNT_EMIS_3,KIA_MIS_CNT_EMIS_4
   - 7E0.7E8.2113:KIA_BAROMETRIC_PRESSURE,KIA_TIMING_ADVANCE_1,KIA_TIMING_ADVANCE_2,KIA_TIMING_ADVANCE_3,KIA_TIMING_ADVANCE_4
-  - 7E0.7E8.2114:KIA_COMMANDED_THROTTLE_ACTUATOR,KIA_COOLANT_FAN__PWM_,KIA_RELATIVE_ACCELERATOR_PEDAL_POSITION,KIA_RELATIVE_ACCELERATOR_PEDAL_POSITION_VOLTAGE,KIA_REQUESTED_TORQUE,KIA_THROTTLE_POSITION_SENSOR_VOLTAGE__1,KIA_THROTTLE_POSITION_SENSOR_VOLTAGE__2,KIA_THROTTLE_POSITION__1,KIA_THROTTLE_POSITION__2
+  - 7E0.7E8.2114:KIA_COMMANDED_THROTTLE_ACTUATOR,KIA_COOLANT_FAN__PWM_,KIA_RELATIVE_ACCELERATOR_PEDAL_POSITION,KIA_RELATIVE_ACCELERATOR_PEDAL_POSITION_VOLTAGE,KIA_REQUESTED_TORQUE2,KIA_THROTTLE_POSITION_1,KIA_THROTTLE_POSITION_2,KIA_THROTTLE_POSITION_SENSOR_VOLTAGE__1,KIA_THROTTLE_POSITION_SENSOR_VOLTAGE__2
   - 7E0.7E8.2115:KIA_STFT_B1,KIA_STFT_B1_IDLE
-  - 7E0.7E8.2116:KIA_KNOCK_RETARD_CYLINDER_1,KIA_KNOCK_RETARD_CYLINDER_2,KIA_KNOCK_RETARD_CYLINDER_3,KIA_KNOCK_RETARD_CYLINDER_4
+  - 7E0.7E8.2116:KIA_ACTUAL_LAMBDA_VALUE,KIA_KNOCK_RETARD_CYLINDER_1,KIA_KNOCK_RETARD_CYLINDER_2,KIA_KNOCK_RETARD_CYLINDER_3,KIA_KNOCK_RETARD_CYLINDER_4,KIA_LABMDA_SENSOR_CORRECTION_VALUE
   - 7E0.7E8.2117:KIA_INTAKE_CAMSHAFT_POSITION_ACTUAL,KIA_INTAKE_CAMSHAFT_POSITION_COMMANDED
-  - 7E0.7E8.211D:KIA_MIS_1_V2,KIA_MIS_2_V2,KIA_MIS_3_V2,KIA_MIS_4_V2,KIA_MIS_CAT_1,KIA_MIS_CAT_2,KIA_MIS_CAT_3,KIA_MIS_CAT_4
   "7E1":
   - 7E1.7E9.011C
   - 7E1.7E9.21A0:KIA_ATF_T,KIA_GEAR,KIA_VSS_V3
