--- a/tests/test_cases/2020/command_support.yaml
+++ b/tests/test_cases/2020/command_support.yaml
@@ -183,6 +183,7 @@ supported_commands_by_ecu:
   - 7E1.7E9.010D
   - 7E1.7E9.0131
   - 7E1.7E9.0142
+  - 7E1.7E9.2201A0:KIA_ATF_T_V2,KIA_BRAKE_PEDAL,KIA_COMMANDED_GEAR,KIA_CURRENT_GEAR,KIA_GEAR_V2,KIA_OUTPUT_SPEED,KIA_REL_APP,KIA_RPM_V2,KIA_TORQUE_CONVERTER_SLIP,KIA_TURBINE_SPEED,KIA_VSS_7E1
   "7E2":
   - 7E2.7EA.22E004:KIA_VPWR_V3
 unsupported_commands_by_ecu:
@@ -196,12 +197,14 @@ unsupported_commands_by_ecu:
   - 7D6.7DE.2106:KIA_TP_1,KIA_TP_2,KIA_TP_3,KIA_TP_4,KIA_TT_1,KIA_TT_2,KIA_TT_3,KIA_TT_4
   "7E0":
   - 7E0.211D:KIA_MIS_1_V2,KIA_MIS_2_V2,KIA_MIS_3_V2,KIA_MIS_4_V2,KIA_MIS_CAT_1,KIA_MIS_CAT_2,KIA_MIS_CAT_3,KIA_MIS_CAT_4
+  - 7E0.2122:KIA_BUTANE_IN_LPG,KIA_LPG_ELECTRICAL_FUEL_PUMP_PWM,KIA_LPG_LOW_SIDE_T,KIA_LPG_PRESSURE_IN_FUEL_RAIL__AVERAGE_
   - 7E0.2221A0:KIA_ATF_TEMP
   - 7E0.7D8.2101
   - 7E0.7D8.2118:KIA_CVVT_T
   - 7E0.7E8.2100:KIA_COOLANT_FAN_HIGH_SPEED,KIA_COOLANT_FAN_LOW_SPEED,KIA_FUEL_CUT_V2,KIA_IDLE_CONTROL_MODE,KIA_KNOCK_DETECTED_V2
   - 7E0.7E8.2101:KIA_COMMANDED_ENGINE_IDLE_RPM,KIA_CONTROL_MODULE_VOLTAGE,KIA_CONTROL_MODULE_VOLTAGE_AFTER_IGNITION,KIA_COOLANT_T_SENSOR_VOLTAGE,KIA_ENGINE_COOLANT_T,KIA_ENGINE_OIL_T,KIA_ENGINE_RPM,KIA_IAT_SENSOR_VOLTAGE,KIA_INTAKE_AIR_T,KIA_INTAKE_MANIFOLD_ABSOLUTE_PRESSURE,KIA_MAP_SENSOR_VOLTAGE,KIA_MIS_1,KIA_MIS_2,KIA_MIS_3,KIA_MIS_4
   - 7E0.7E8.2102:KIA_COMMANDED_EVAPORATIVE_PURGE,KIA_INJ_TIMING_1,KIA_INJ_TIMING_2,KIA_INJ_TIMING_3,KIA_INJ_TIMING_4,KIA_OXYGEN_SENSOR_11,KIA_OXYGEN_SENSOR_21,KIA_VSS_V2_V2
+  - 7E0.7E8.2103:KIA_REQUESTED_TORQUE
   - 7E0.7E8.2104:KIA_COOLANT_FAN_HIGH_SPEED__1_8_,KIA_COOLANT_FAN_LOW_SPEED__1_8_,KIA_FUEL_CUT,KIA_KNOCK_DETECTED,KIA_WIDE_OPEN_THROTTLE
   - 7E0.7E8.210D:KIA_MIS_CNT_1,KIA_MIS_CNT_2,KIA_MIS_CNT_3,KIA_MIS_CNT_4,KIA_MIS_CNT_ALL,KIA_MIS_CNT_EMIS_1,KIA_MIS_CNT_EMIS_2,KIA_MIS_CNT_EMIS_3,KIA_MIS_CNT_EMIS_4
   - 7E0.7E8.2113:KIA_BAROMETRIC_PRESSURE,KIA_TIMING_ADVANCE_1,KIA_TIMING_ADVANCE_2,KIA_TIMING_ADVANCE_3,KIA_TIMING_ADVANCE_4
@@ -209,6 +212,7 @@ unsupported_commands_by_ecu:
   - 7E0.7E8.2115:KIA_STFT_B1,KIA_STFT_B1_IDLE
   - 7E0.7E8.2116:KIA_ACTUAL_LAMBDA_VALUE,KIA_KNOCK_RETARD_CYLINDER_1,KIA_KNOCK_RETARD_CYLINDER_2,KIA_KNOCK_RETARD_CYLINDER_3,KIA_KNOCK_RETARD_CYLINDER_4,KIA_LABMDA_SENSOR_CORRECTION_VALUE
   - 7E0.7E8.2117:KIA_INTAKE_CAMSHAFT_POSITION_ACTUAL,KIA_INTAKE_CAMSHAFT_POSITION_COMMANDED
+  - 7E0.7E8.2119:KIA_FUEL_ADAPTATION_AT_IDLE,KIA_FUEL_ADAPTATION_AT_PART_LOAD,KIA_KNOCK_RETARD_1_V2,KIA_KNOCK_RETARD_2_V2,KIA_KNOCK_RETARD_3_V2,KIA_KNOCK_RETARD_4_V2
   "7E1":
   - 7E1.7E9.011C
   - 7E1.7E9.21A0:KIA_ATF_T,KIA_GEAR,KIA_VSS_V3
