Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E1.7E9.2201A0.yaml
+++ b/tests/test_cases/2020/commands/7E1.7E9.2201A0.yaml
@@ -21,6 +21,26 @@ test_cases:
     7E92500000000000000
     7E92600AAAAAAAAAAAA
 - expected_values:
+    KIA_ATF_T_V2: 56
+    KIA_BRAKE_PEDAL: 241
+    KIA_COMMANDED_GEAR: 1
+    KIA_CURRENT_GEAR: 1
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED: 0
+    KIA_REL_APP: 0
+    KIA_RPM_V2: 605
+    KIA_TORQUE_CONVERTER_SLIP: 605
+    KIA_TURBINE_SPEED: 0
+    KIA_VSS_7E1: 0
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E92100097400000000
+    7E922000000600E5111
+    7E92374C00D080101FF
+    7E924F1C03F00CD3000
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
     KIA_ATF_T_V2: 55
     KIA_BRAKE_PEDAL: 241
     KIA_COMMANDED_GEAR: 1
@@ -141,6 +161,26 @@ test_cases:
     7E92500000000000000
     7E92600AAAAAAAAAAAA
 - expected_values:
+    KIA_ATF_T_V2: 56
+    KIA_BRAKE_PEDAL: 240
+    KIA_COMMANDED_GEAR: 1
+    KIA_CURRENT_GEAR: 1
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED: 79
+    KIA_REL_APP: 23.52941
+    KIA_RPM_V2: 1041
+    KIA_TORQUE_CONVERTER_SLIP: 751
+    KIA_TURBINE_SPEED: 293
+    KIA_VSS_7E1: 2
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E921001044021A3C04
+    7E92294013C600E5113
+    7E923BCC033080101FF
+    7E924F0C03F00CD3000
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
     KIA_ATF_T_V2: 60
     KIA_BRAKE_PEDAL: 240
     KIA_COMMANDED_GEAR: 1
@@ -201,22 +241,22 @@ test_cases:
     7E92500000000000000
     7E92600AAAAAAAAAAAA
 - expected_values:
-    KIA_ATF_T_V2: 52
+    KIA_ATF_T_V2: 56
     KIA_BRAKE_PEDAL: 240
-    KIA_COMMANDED_GEAR: 20
-    KIA_CURRENT_GEAR: 3
+    KIA_COMMANDED_GEAR: 23
+    KIA_CURRENT_GEAR: 7
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED: 1001
-    KIA_REL_APP: 29.01961
-    KIA_RPM_V2: 1359
-    KIA_TORQUE_CONVERTER_SLIP: 164
-    KIA_TURBINE_SPEED: 1191
-    KIA_VSS_7E1: 35
+    KIA_OUTPUT_SPEED: 2122
+    KIA_REL_APP: 20
+    KIA_RPM_V2: 1362
+    KIA_TORQUE_CONVERTER_SLIP: -3
+    KIA_TURBINE_SPEED: 1364
+    KIA_VSS_7E1: 75
   response: |-
     7E9102A6201A0FFFFC0
-    7E92100153C23394A12
-    7E9229C0FA45C064A0A
-    7E92390C056080314FF
+    7E9210015484B2C3315
+    7E92250212860028307
+    7E923F4C143080717FF
     7E924F0C03F00CD3000
     7E92500000000000000
     7E92600AAAAAAAAAAAA
@@ -241,6 +281,26 @@ test_cases:
     7E92500000000000000
     7E92600AAAAAAAAAAAA
 - expected_values:
+    KIA_ATF_T_V2: 56
+    KIA_BRAKE_PEDAL: 240
+    KIA_COMMANDED_GEAR: 1
+    KIA_CURRENT_GEAR: 14
+    KIA_GEAR_V2: 10
+    KIA_OUTPUT_SPEED: 47
+    KIA_REL_APP: 24.70588
+    KIA_RPM_V2: 1421
+    KIA_TORQUE_CONVERTER_SLIP: 1314
+    KIA_TURBINE_SPEED: 109
+    KIA_VSS_7E1: 1
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E92100163401253F01
+    7E922B400BC6008E11C
+    7E92388C0350A0E01FF
+    7E924F0C03F00778600
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
     KIA_ATF_T_V2: 62
     KIA_BRAKE_PEDAL: 241
     KIA_COMMANDED_GEAR: 20
@@ -258,5 +318,25 @@ test_cases:
     7E922C0141866033A07
     7E92310C200080614FF
     7E924F1C03F00CD3000
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
+    KIA_ATF_T_V2: 55
+    KIA_BRAKE_PEDAL: 240
+    KIA_COMMANDED_GEAR: 20
+    KIA_CURRENT_GEAR: 3
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED: 1466
+    KIA_REL_APP: 32.94118
+    KIA_RPM_V2: 1899
+    KIA_TORQUE_CONVERTER_SLIP: 68
+    KIA_TURBINE_SPEED: 1819
+    KIA_VSS_7E1: 52
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E921001DAC343D541C
+    7E9226C16E85F064A09
+    7E92310C061080314FF
+    7E924F0C03F00CD3000
     7E92500000000000000
     7E92600AAAAAAAAAAAA
