Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
@@ -615,6 +615,23 @@ test_cases:
 - expected_values:
     KIA_KNOCK_RETARD_1_E019: 0
     KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: -3
+    KIA_KNOCK_RETARD_4_E019: -0.75
+  response: |-
+    7E8104B62E019FFE7E7
+    7E821670160005A0080
+    7E822007A00FBFBF7FA
+    7E823F9F80000FFFFFB
+    7E824FEFDFC0000100F
+    7E825120F140D000097
+    7E82601850100007E70
+    7E82700000000F6FF10
+    7E8280000000000ABF1
+    7E82908E3C000000000
+    7E82A9AF972F589DEAA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
     KIA_KNOCK_RETARD_3_E019: 0
     KIA_KNOCK_RETARD_4_E019: 0
   response: |-
@@ -680,6 +697,23 @@ test_cases:
     7E8280000000000DDF0
     7E829D0E4C000000000
     7E82A89FA74F637DFAA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
+    7E82167017A006D0097
+    7E822008E00FFFFFFFF
+    7E823FFFF0000FFFFFF
+    7E824FFFFFF00000C04
+    7E8250D080A05000097
+    7E82601850100007E70
+    7E82700000000200014
+    7E8280000000000CAF1
+    7E82946E3C000000000
+    7E82A0BFA5DF59DDEAA
 - expected_values:
     KIA_KNOCK_RETARD_1_E019: 0
     KIA_KNOCK_RETARD_2_E019: 0
