--- a/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
@@ -483,6 +483,23 @@ test_cases:
     KIA_KNOCK_RETARD_4_E019: 0
   response: |-
     7E8104B62E019FFE7E7
+    7E821670127005F0023
+    7E822007C00FFFFFFFF
+    7E823FFFF0000FFFFFF
+    7E824FFFFFF00000C0D
+    7E8250D130E0D000094
+    7E82601A70100007E70
+    7E82700000000F5FF17
+    7E8280000000000F8EF
+    7E82959E2C000000000
+    7E82A1CF81CF5CEDDAA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
     7E82167012D0039002D
     7E822004600FFFFFFFF
     7E823FFFF0000FFFFFF
