Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E1.7E9.2201A0.yaml
+++ b/tests/test_cases/2020/commands/7E1.7E9.2201A0.yaml
@@ -81,6 +81,26 @@ test_cases:
     7E92500000000000000
     7E92600AAAAAAAAAAAA
 - expected_values:
+    KIA_ATF_T_V2: 64
+    KIA_BRAKE_PEDAL: 241
+    KIA_COMMANDED_GEAR: 1
+    KIA_CURRENT_GEAR: 1
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED: 0
+    KIA_REL_APP: 0
+    KIA_RPM_V2: 598
+    KIA_TORQUE_CONVERTER_SLIP: 598
+    KIA_TURBINE_SPEED: 0
+    KIA_VSS_7E1: 0
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E92100095800000000
+    7E922000000680E5111
+    7E92358BE0F080101FF
+    7E924F1C03F00CD3000
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
     KIA_ATF_T_V2: 58
     KIA_BRAKE_PEDAL: 240
     KIA_COMMANDED_GEAR: 1
@@ -221,23 +241,23 @@ test_cases:
     7E92500000000000000
     7E92600AAAAAAAAAAAA
 - expected_values:
-    KIA_ATF_T_V2: 68
-    KIA_BRAKE_PEDAL: 241
-    KIA_COMMANDED_GEAR: 2
+    KIA_ATF_T_V2: 60
+    KIA_BRAKE_PEDAL: 240
+    KIA_COMMANDED_GEAR: 19
     KIA_CURRENT_GEAR: 3
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED: 437
-    KIA_REL_APP: 0
-    KIA_RPM_V2: 741
-    KIA_TORQUE_CONVERTER_SLIP: -15
-    KIA_TURBINE_SPEED: 757
-    KIA_VSS_7E1: 15
+    KIA_OUTPUT_SPEED: 575
+    KIA_REL_APP: 3.13725
+    KIA_RPM_V2: 924
+    KIA_TORQUE_CONVERTER_SLIP: -2
+    KIA_TURBINE_SPEED: 925
+    KIA_VSS_7E1: 20
   response: |-
     7E9102A6201A0FFFFC0
-    7E921000B940F00000B
-    7E922D406D46C064A07
-    7E923C4C003080302FF
-    7E924F1C03F00CD3000
+    7E921000E701407080E
+    7E9227408FC64064A07
+    7E923F8C007080313FF
+    7E924F0C03F00CD3000
     7E92500000000000000
     7E92600AAAAAAAAAAAA
 - expected_values:
@@ -258,6 +278,26 @@ test_cases:
     7E9223C124C74033A07
     7E923B8C400080614FF
     7E924F0C03F00CD3000
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
+    KIA_ATF_T_V2: 70
+    KIA_BRAKE_PEDAL: 241
+    KIA_COMMANDED_GEAR: 2
+    KIA_CURRENT_GEAR: 2
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED: 443
+    KIA_REL_APP: 0
+    KIA_RPM_V2: 971
+    KIA_TORQUE_CONVERTER_SLIP: -93
+    KIA_TURBINE_SPEED: 1063
+    KIA_VSS_7E1: 15
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E921000F2C0F000010
+    7E9229C06EC6E095C06
+    7E9238CBF06080202FF
+    7E924F1C03F00CD3000
     7E92500000000000000
     7E92600AAAAAAAAAAAA
 - expected_values:
@@ -301,22 +341,22 @@ test_cases:
     7E92500000000000000
     7E92600AAAAAAAAAAAA
 - expected_values:
-    KIA_ATF_T_V2: 75
+    KIA_ATF_T_V2: 59
     KIA_BRAKE_PEDAL: 240
     KIA_COMMANDED_GEAR: 21
     KIA_CURRENT_GEAR: 5
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED: 1148
-    KIA_REL_APP: 9.41176
-    KIA_RPM_V2: 1144
-    KIA_TORQUE_CONVERTER_SLIP: -2
-    KIA_TURBINE_SPEED: 1147
-    KIA_VSS_7E1: 40
+    KIA_OUTPUT_SPEED: 1045
+    KIA_REL_APP: 0
+    KIA_RPM_V2: 1040
+    KIA_TORQUE_CONVERTER_SLIP: -5
+    KIA_TURBINE_SPEED: 1044
+    KIA_VSS_7E1: 37
   response: |-
     7E9102A6201A0FFFFC0
-    7E9210011E028101811
-    7E922EC11F07303E807
-    7E923F8C220080515FF
+    7E92100104025000010
+    7E9225010546303E807
+    7E923ECC200080515FF
     7E924F0C03F00CD3000
     7E92500000000000000
     7E92600AAAAAAAAAAAA
